[gd_scene load_steps=7 format=2]

[ext_resource path="res://theme/pattern.tres" type="TileSet" id=1]
[ext_resource path="res://ui/pattern_editor/pattern_editor.gd" type="Script" id=2]
[ext_resource path="res://ui/pattern_editor/pattern_bg.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0666667, 0, 0, 1 )

[sub_resource type="Animation" id=2]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="GDScript" id=3]
script/source = "extends Node2D

export (Vector2) var cell_size:Vector2=Vector2(8.0,16.0) setget set_cell_size

var selection:Selection setget set_selection

func set_cell_size(cs:Vector2)->void:
	cell_size=cs.abs()
	update()

func set_selection(s:Selection)->void:
	if s!=selection:
		selection=s
		selection.connect(\"selection_changed\",self,\"_on_selection_changed\")

func _on_selection_changed()->void:
	visible=selection.active
	update()


func _draw()->void:
	if selection==null or !selection.active:
		return
	var r:Rect2=Rect2(selection.rect.position*cell_size,selection.rect.size*cell_size)
	draw_rect(r,Color(1.0,1.0,1.0),false)
"

[node name="Editor" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Lines" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 16 )
format = 1
__meta__ = {
"_edit_group_": true
}

[node name="Pattern" type="TileMap" parent="."]
position = Vector2( 32, 0 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 16 )
format = 1
__meta__ = {
"_edit_group_": true
}

[node name="Cursor" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, 12, 8, 12, 8, 16, 0, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cursor"]
autoplay = "Blink"
anims/Blink = SubResource( 2 )

[node name="Selection" type="Node2D" parent="."]
position = Vector2( 32, 0 )
script = SubResource( 3 )
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Editor_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Editor_mouse_exited"]
[connection signal="resized" from="." to="." method="_on_resized"]
